# routes/api.php
@@ -35,6 +35,8 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::middleware('can:manage products')->group(function () {
         Route::get('/products', [ProductController::class, 'index']);
         Route::post('/products', [ProductController::class, 'store']);
+        Route::put('/products/{product}', [ProductController::class, 'update']);
+        Route::delete('/products/{product}', [ProductController::class, 'destroy']);
     });
 
     /**
